# dossier-review-AI-assistant

./: .gitignore  Dockerfile  GEMINI.md  README.md  data_traceability_matrix.csv  dataset_audit_report.md  docker-compose.local.yml  gap_analysis.md  pyproject.toml
hf-space/: .dockerignore  fix_samples.py  main.py  mcp_tools_test.md  pyproject.toml  repro_error.py  requirements_traceability_matrix.csv  writeup.tex
hf-space/.github/workflows/: deploy_hf_demo.yml
hf-space/hf-space/: .gitignore  README.md  acceptance_scorecard.md  docker-compose.local.yml  ground_rules.ps1
hf-space/hf-space/.codex/: config.toml
hf-space/sample_dossiers/: deep_review_incomplete_evidence_sample.json  reserve_fast_track_sample.json
hf-space/sample_dossiers/incoming_files/: catalog.json
hf-space/src/dossier_review_ai_assistant/: __init__.py  config.py  conversation.py  data.py  gates.py  governance.py  knowledge_graph.py  mcp.py  orchestrator.py  policy.py  regulatory_mcp_client.py  reporting.py  retrieval.py  router.py  schemas.py  telemetry.py
hf-space/src/dossier_review_ai_assistant.egg-info/: PKG-INFO  requires.txt
hf-space/state/: HANDOFF_STATE.md  auth_state.json  knowledge_wiki.json  project_state.json
hf-space/state/eval/: amr_requirements_report.json  final_report.json  iteration_context_report.json  milestone1_report.json  post_policy_oldsplit_report.json  step4_report.json  test_report.json
hf-space/state/reports/: arrow_drill_e2e_20260511_190751.json  chart_workflow_demo_20260420_101802.json  graph_and_history_demo_20260420_110751.json  mcp_realistic_simulations_20260425_210913.json  mcp_realistic_simulations_20260425_210913.md  mcp_realistic_simulations_20260425_211128.json  (+22 more)
hf-space/ui/: amr.html  index.html  login.html  review.html  wiki.html
(+1182 files in other folders)
