[project]
name = "dossier-review-ai-assistant"
version = "0.1.0"
description = "Local-first policy copilot for dossier review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "langgraph>=0.2.60",
  "mcp>=1.27.0",
  "numpy>=2.0.0",
  "pillow>=12.0.0",
  "pydantic>=2.8.0",
  "psutil>=7.0.0",
  "pypdf>=6.0.0",
  "pypdfium2>=5.0.0",
  "python-multipart>=0.0.9",
  "rapidocr-onnxruntime>=1.4.4",
  "uvicorn>=0.30.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
regulatory-mcp = "regulatory_mcp_server.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
asyncio_mode = "auto"
